# drf_geodata

./: .gitignore  Dockerfile  MANIFEST.in  README.md  manage.py  pyproject.toml  requirements.txt  setup.py
drf_geo/: Dockerfile  settings.py  urls.py  wsgi.py
drf_geo/drf_geo/: asgi.py  settings.py
drf_geo/geo_data/: database.py  middleware.py  task.py  urls.py  utility.py  views.py
drf_geo/geo_data/migrations/: 0002_geo_data_ip_init.py  0003_geodata_delete_geo_data.py
geo_auth/: Serializer.py  apps.py  database.py  middleware.py  task.py  tests.py  urls.py  utility.py  views.py
geo_data/: Serializer.py  apps.py  database.py  middleware.py  task.py  urls.py  utility.py  views.py
geo_data/migrations/: 0001_initial.py  0004_delete_geodata.py
myenv/: pyvenv.cfg
myenv/Scripts/: activate  activate.bat
